base: Implement alternative device key handler
@jhenrique09 edits:
* Adapt to PE
* Minify code

This is omni's rom keyhandler implementation

You can't use it if config_deviceKeyHandlerLibs/config_deviceKeyHandlerClasses (LOS implementation) is defined

Change-Id: I5b37c4cf251da1de32498ab707914b5c2c752b7a

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -3540,4 +3540,13 @@
     <!-- Enable sms authorization framework-->
     <bool name="config_sms_authorization_enabled">false</bool>
 
+    <!-- Names of the key handler classes -->
+    <string-array name="config_deviceKeyHandlerClasses" translatable="false">
+    </string-array>
+
+    <!-- Path to the library that contains a alternative device specific key handler -->
+    <string name="config_alternativeDeviceKeyHandlerLib" translatable="false"></string>
+
+    <!-- Name of that alternative key handler class -->
+    <string name="config_alternativeDeviceKeyHandlerClass" translatable="false"></string>
 </resources>
