--- a/core/res/res/values/viper_config.xml
+++ b/core/res/res/values/viper_config.xml
@@ -42,4 +42,9 @@
 
     <bool name="config_canForceDozeNotifications">true</bool>
 
+    <!-- Path to the library that contains a alternative device specific key handler -->
+    <string name="config_alternativeDeviceKeyHandlerLib" translatable="false"></string>
+
+    <!-- Name of that alternative key handler class -->
+    <string name="config_alternativeDeviceKeyHandlerClass" translatable="false"></string>
 </resources>
