--- a/core/res/res/values/viper_symbols.xml
+++ b/core/res/res/values/viper_symbols.xml
@@ -120,4 +120,8 @@
 
   <java-symbol type="bool" name="config_canForceDozeNotifications" />
 
+  <!-- Alternative keyhandler -->
+  <java-symbol type="string" name="config_alternativeDeviceKeyHandlerLib" />
+  <java-symbol type="string" name="config_alternativeDeviceKeyHandlerClass" />
+
 </resources>
