--- a/core/res/res/values/viper_symbols.xml
+++ b/core/res/res/values/viper_symbols.xml
@@ -128,4 +128,8 @@
   <java-symbol type="integer" name="nav_gesture_swipe_timout" />
   <java-symbol type="integer" name="nav_gesture_move_threshold" />
 
+  <!-- Alternative keyhandler -->
+  <java-symbol type="string" name="config_alternativeDeviceKeyHandlerLib" />
+  <java-symbol type="string" name="config_alternativeDeviceKeyHandlerClass" />
+
 </resources>
