Add devickeyhandler config & symbols
Change-Id: I6bd1cc1e259e18f630c47022a09bb771fc4ed4a6

--- a/core/res/res/values/viper_config.xml
+++ b/core/res/res/values/viper_config.xml
@@ -42,6 +42,12 @@
 
     <bool name="config_canForceDozeNotifications">true</bool>
 
+    <string-array name="config_deviceKeyHandlerLibs" translatable="false">
+    </string-array>
+
+    <string-array name="config_deviceKeyHandlerClasses" translatable="false">
+    </string-array>
+
     <!-- Path to the library that contains a alternative device specific key handler -->
     <string name="config_alternativeDeviceKeyHandlerLib" translatable="false"></string>
 
