--- a/core/res/res/values/viper_symbols.xml
+++ b/core/res/res/values/viper_symbols.xml
@@ -124,4 +124,7 @@
   <java-symbol type="string" name="config_alternativeDeviceKeyHandlerLib" />
   <java-symbol type="string" name="config_alternativeDeviceKeyHandlerClass" />
 
+  <java-symbol type="array" name="config_deviceKeyHandlerLibs" />
+  <java-symbol type="array" name="config_deviceKeyHandlerClasses" />
+
 </resources>
