--- a/core/res/res/values/du_config.xml
+++ b/core/res/res/values/du_config.xml
@@ -47,9 +47,9 @@
     <string-array name="config_deviceKeyHandlerLibs" translatable="false">
     </string-array>
 
-    <!-- Names of the key handler classes -->
+    <!-- Names of the key handler classes 
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
-    </string-array>
+    </string-array> -->
 
     <!-- Default value for proximity check on screen wake
          NOTE ! - Enable for devices that have a fast response proximity sensor (ideally < 300ms)
